# rust-ai-ready-stack

./: .env.example  .gitignore  Cargo.toml  Makefile  PROTOC_SETUP.md  README.md  docker-compose.yml
.cargo/: config.toml
files_rag/: placeholder.txt
scripts/: protoc-clean.ps1  protoc-setup.ps1
src/: error.rs  main.rs  state.rs
src/adapters/: mod.rs
src/adapters/anthropic/: mod.rs
src/adapters/email/: smtp_email_sender.rs
src/adapters/google/: google_oauth_authorization_url_builder.rs  google_oauth_provider.rs  mod.rs
src/adapters/http/: axum_session_cookie_service.rs  mod.rs
src/adapters/jwt/: jwt_identity_service.rs  mod.rs
src/adapters/lancedb/: document_repository.rs  lancedb_store.rs  mod.rs
src/adapters/mongodb/: example_repository.rs  mod.rs  models.rs  mongo_repo.rs  user_repository.rs
src/adapters/ollama/: mod.rs
src/adapters/openai/: embedding_generator.rs  mod.rs  rag_chat_provider.rs
src/application/: mod.rs
src/domain/: errors.rs
src/domain/entities/: auth_claims.rs  auth_identity.rs  conversation.rs  mod.rs  (+3 more)
src/middleware/: error_handler.rs  mod.rs  require_jwt_cookie.rs
src/templates/: open_24_hours_email_template.rs  pending_email_template.rs
src/utils/: chunk_generator.rs  cnpj_validator.rs  domain_validator.rs  email_validator.rs  mod.rs  phone_validator.rs  send_email.rs
tests/: auth_routes_require_jwt_contract.rs  case_tag_manager_authorization_contract.rs  customer_profile_http_contract.rs  domain_purity.rs  pending_user_notifications_contract.rs  register_case_http_contract.rs  update_customer_integration.rs
(+29 files in other folders)
