[package]
name = "rust-ai-ready-stack"
version = "0.1.0"
edition = "2021" # Mudei para 2021 pois 2024 ainda é instável

[dependencies]
anyhow = "1.0"
axum = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
dotenv = "0.15.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"

uuid = { version = "1", features = ["v4", "fast-rng"] }

chrono = { version = "0.4", features = ["serde"] }

async-openai = "0.18"
thiserror = "1.0"

futures = "0.3"
lancedb = "0.23"
arrow-array = "56.2"
tower-http = { version = "0.6", features = ["cors", "catch-panic"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
axum-cookie = "0.2"
mongodb = { version = "3.5", features = ["rustls-tls"] }
async-trait = "0.1"
lettre = { version = "0.11", features = ["native-tls"] }

[dev-dependencies]
tower = "0.5"

[profile.dev]
debug = 0
incremental = true
codegen-units = 256
lto = false
